Jahnavi Undela CMRIT 1CR21CS074 Errors handled submission

--- a/src/5-subplot.ipynb
+++ b/src/5-subplot.ipynb
@@ -61,32 +61,35 @@
     }
    ],
    "source": [
-    "# Create a 2x2 subplot layout\n",
-    "fig, axs = plt.subplots(2, 2, figsize=(10, 8))\n",
+    "# Error handling: Check if data is valid\n",
+    "try:\n",
+    "    if len(categories) != len(values):\n",
+    "        raise ValueError(\"Categories and values must have the same length\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "else:\n",
+    "    fig, axs = plt.subplots(2, 2, figsize=(10, 8))\n",
     "\n",
-    "# First subplot: Line chart\n",
-    "axs[0, 0].plot(x, y)\n",
-    "axs[0, 0].set_title(\"Line Chart (y = x^2)\")\n",
+    "    # Line plot\n",
+    "    axs[0, 0].plot(x, y)\n",
+    "    axs[0, 0].set_title(\"Line Chart (y = x^2)\")\n",
     "\n",
-    "# Second subplot: Bar chart\n",
-    "axs[0, 1].bar(categories, values, color=['red', 'blue', 'green', 'purple'])\n",
-    "axs[0, 1].set_title(\"Bar Chart\")\n",
+    "    # Bar chart\n",
+    "    axs[0, 1].bar(categories, values, color=['red', 'blue', 'green', 'purple'])\n",
+    "    axs[0, 1].set_title(\"Bar Chart\")\n",
     "\n",
-    "# Third subplot: Scatter plot\n",
-    "axs[1, 0].scatter(scatter_x, scatter_y)\n",
-    "for i in range(len(scatter_x)):\n",
-    "    axs[1, 0].annotate(f'({scatter_x[i]}, {scatter_y[i]})', (scatter_x[i], scatter_y[i]), textcoords=\"offset points\", xytext=(0,5), ha='center')\n",
-    "axs[1, 0].set_title(\"Scatter Plot with Annotations\")\n",
+    "    # Scatter plot\n",
+    "    axs[1, 0].scatter(scatter_x, scatter_y)\n",
+    "    for i in range(len(scatter_x)):\n",
+    "        axs[1, 0].annotate(f'({scatter_x[i]}, {scatter_y[i]})', (scatter_x[i], scatter_y[i]), textcoords=\"offset points\", xytext=(0,5), ha='center')\n",
+    "    axs[1, 0].set_title(\"Scatter Plot with Annotations\")\n",
     "\n",
-    "# Fourth subplot: Pie chart\n",
-    "axs[1, 1].pie(pie_sizes, labels=pie_labels, autopct='%1.1f%%')\n",
-    "axs[1, 1].set_title(\"Pie Chart\")\n",
+    "    # Pie chart\n",
+    "    axs[1, 1].pie(pie_sizes, labels=pie_labels, autopct='%1.1f%%')\n",
+    "    axs[1, 1].set_title(\"Pie Chart\")\n",
     "\n",
-    "# Adjust layout for better spacing\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# Show the plots\n",
-    "plt.show()"
+    "    plt.tight_layout()\n",
+    "    plt.show()"
    ]
   },
   {
