--- a/src/1-line-plot.ipynb
+++ b/src/1-line-plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,25 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate x values from 0 to 10\n",
-    "x = np.linspace(0, 10, 100)\n",
-    "\n",
-    "# Calculate y values as the square of x\n",
-    "y = x**2"
    ]
   },
   {
@@ -57,16 +44,24 @@
     }
    ],
    "source": [
-    "# Create the plot\n",
-    "plt.plot(x, y)\n",
-    "# Customize the plot with a title, labels, and grid\n",
-    "plt.title(\"Line Plot of y = x^2\")\n",
-    "plt.xlabel(\"x values\")\n",
-    "plt.ylabel(\"y values (x^2)\")\n",
-    "plt.grid(True)\n",
+    "# Generate x values from 0 to 10\n",
+    "x = np.linspace(0, 10, 100)\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# Error handling: Ensure x is valid\n",
+    "try:\n",
+    "    if len(x) == 0:\n",
+    "        raise ValueError(\"x cannot be empty\")\n",
+    "    y = x**2  # Calculate y as the square of x\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "else:\n",
+    "    # Plot the line chart\n",
+    "    plt.plot(x, y)\n",
+    "    plt.title(\"Line Plot of y = x^2\")\n",
+    "    plt.xlabel(\"x values\")\n",
+    "    plt.ylabel(\"y values (x^2)\")\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n"
    ]
   },
   {
