--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -54,18 +54,19 @@
     }
    ],
    "source": [
-    "# Create the scatter plot\n",
-    "plt.scatter(x, y)\n",
-    "\n",
-    "# Annotate each point with its (x, y) value\n",
-    "for i in range(len(x)):\n",
-    "    plt.annotate(f'({x[i]}, {y[i]})', (x[i], y[i]), textcoords=\"offset points\", xytext=(0,5), ha='center')\n",
-    "\n",
-    "# Add a title to the plot\n",
-    "plt.title(\"Scatter Plot with Annotations\")\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# Error handling: Ensure x and y have the same length\n",
+    "try:\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"x and y must have the same length\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "else:\n",
+    "    # Create the scatter plot\n",
+    "    plt.scatter(x, y)\n",
+    "    for i in range(len(x)):\n",
+    "        plt.annotate(f'({x[i]}, {y[i]})', (x[i], y[i]), textcoords=\"offset points\", xytext=(0,5), ha='center')\n",
+    "    plt.title(\"Scatter Plot with Annotations\")\n",
+    "    plt.show()"
    ]
   },
   {
