--- a/src/6-histogram.ipynb
+++ b/src/6-histogram.ipynb
@@ -36,19 +36,22 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Data for the histogram\n",
+    "# Sample data\n",
     "data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5]\n",
     "\n",
-    "# Create the histogram\n",
-    "plt.hist(data, bins=5, color='skyblue', edgecolor='black')\n",
-    "\n",
-    "# Customize the plot with a title and labels\n",
-    "plt.title(\"Histogram of Given Data\")\n",
-    "plt.xlabel(\"Value\")\n",
-    "plt.ylabel(\"Frequency\")\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# Error handling: Ensure data is not empty\n",
+    "try:\n",
+    "    if len(data) == 0:\n",
+    "        raise ValueError(\"Data cannot be empty\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "else:\n",
+    "    # Create the histogram\n",
+    "    plt.hist(data, bins=5, color='skyblue', edgecolor='black')\n",
+    "    plt.title(\"Histogram of Given Data\")\n",
+    "    plt.xlabel(\"Value\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.show()\n"
    ]
   },
   {
